--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -388,13 +388,26 @@
                                     [(ngModel)]="model.pages[page].elements[question].acceptedTypes"
                                     id="form-acceptedTypes"
                                     name="form-acceptedTypes">
-                                <option value=""
-                                        i18n>Alles erlauben</option>
+                                <!--<option value=""
+                                        i18n>Alles erlauben</option>-->
                                 <option value=".pdf"
                                         i18n>PDF-Dokumente</option>
                                 <option value="image/*"
                                         i18n>Bilder</option>
                             </select>
+                        </div>
+
+                        <!-- question-maxSize -->
+                        <div class="form-group">
+                            <label for="question-maxSize"
+                                   i18n>Maximale Dateigröße in Bytes</label>
+                            <input type="number"
+                                   class="form-control"
+                                   min="0"
+                                   max="20971520"
+                                   [(ngModel)]="model.pages[page].elements[question].maxSize"
+                                   name="question-maxSize"
+                                   id="question-maxSize">
                         </div>
                     </div>
 
