--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -10,7 +10,8 @@
         <li>Bei Fehlern: Versionsnummer (siehe Fußzeile)</li>
     </ul>
     <p class="lead">Dieser Button öffnet Ihr E-Mail-Programm:</p>
-    <a type="button" class="btn btn-primary"
+    <a type="button"
+       class="btn btn-primary"
        href="mailto:incoming+lgln-power-ni-power-frontend-17688796-issue-@incoming.gitlab.com">
         Feedback geben
     </a>
