Navigation: Increased contrast for better accessibility

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -145,12 +145,15 @@
                     <ul class="list-unstyled text-small">
                         <li class="m-2"><a
                                href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/impressum/impressum-92629.html"
+                               class="footer-link"
                                i18n>Impressum</a></li>
                         <li class="m-2"><a
                                href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/datenschutz/datenschutz-im-lgln-138166.html"
+                               class="footer-link"
                                i18n>Datenschutz</a></li>
                         <li class="m-2"><a
                                href="https://www.lgln.niedersachsen.de/startseite/wir_uber_uns_amp_organisation/allgemeine_geschafts_und_nutzungsbedingungen_agnb/allgemeine-geschafts-und-nutzungsbedingungen-agnb-97401.html"
+                               class="footer-link"
                                i18n>Allgemeine Geschäfts- <br>und Nutzungsbedingungen</a></li>
                     </ul>
                     <p class="text-muted"
