added cursor change to arrow

--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -52,6 +52,7 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -64,6 +65,7 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                               d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -94,6 +96,7 @@
                                         height="0.8em"
                                         viewBox="0 1.2 16 16"
                                         class="bi bi-arrow-up"
+                                        role="button"
                                         aria-hidden="true">
                                         <path
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -107,6 +110,7 @@
                                         height="0.8em"
                                         viewBox="0 1.2 16 16"
                                         class="bi bi-arrow-down"
+                                        role="button"
                                         aria-hidden="true">
                                         <path
                                             d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -127,6 +131,7 @@
                                         height="0.8em"
                                         viewBox="0 1.2 16 16"
                                         class="bi bi-arrow-up"
+                                        role="button"
                                         aria-hidden="true">
                                         <path
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -136,10 +141,11 @@
                                 </span>
                                 <span *ngIf="taskOrder === 'desc'">
                                     <svg width="1em"
-                                        height="0.8em"
-                                        viewBox="0 1.2 16 16"
-                                        class="bi bi-arrow-down"
-                                        aria-hidden="true">
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-down"
+                                         role="button"
+                                         aria-hidden="true">
                                         <path
                                             d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
@@ -267,6 +273,7 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -279,6 +286,7 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                             d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -299,6 +307,7 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-up"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -311,6 +320,7 @@
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
                                          class="bi bi-arrow-down"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                             d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -340,6 +350,7 @@
                                         height="0.8em"
                                         viewBox="0 1.2 16 16"
                                         class="bi bi-arrow-up"
+                                        role="button"
                                         aria-hidden="true">
                                         <path
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -349,10 +360,11 @@
                                 </span>
                                 <span *ngIf="formOrder === 'desc'">
                                     <svg width="1em"
-                                        height="0.8em"
-                                        viewBox="0 1.2 16 16"
-                                        class="bi bi-arrow-down"
-                                        aria-hidden="true">
+                                         height="0.8em"
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-down"
+                                         role="button"
+                                         aria-hidden="true">
                                         <path
                                             d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
