--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -29,7 +29,8 @@
                                     <svg width="1em" 
                                          height="0.8em" 
                                          viewBox="0 1.2 16 16" 
-                                         class="bi bi-arrow-up" 
+                                         class="bi bi-arrow-up"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -42,7 +43,8 @@
                                     <svg width="1em" 
                                          height="0.8em"
                                          viewBox="0 1.2 16 16" 
-                                         class="bi bi-arrow-down" 
+                                         class="bi bi-arrow-down"
+                                         role="button" 
                                          aria-hidden="true">
                                         <path
                                             d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
@@ -61,6 +63,7 @@
                                          height="0.8em" 
                                          viewBox="0 1.2 16 16" 
                                          class="bi bi-arrow-up"
+                                         role="button"
                                          aria-hidden="true">
                                         <path
                                             d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z" />
@@ -72,9 +75,10 @@
                                 <span *ngIf="order === 'desc'">
                                     <svg width="1em" 
                                          height="0.8em" 
-                                        viewBox="0 1.2 16 16"
-                                        class="bi bi-arrow-down"
-                                        aria-hidden="true">
+                                         viewBox="0 1.2 16 16"
+                                         class="bi bi-arrow-down"
+                                         role="button"
+                                         aria-hidden="true">
                                         <path
                                             d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z" />
                                     </svg>
